@@ -2,6 +2,7 @@ package com.example.vet_mvc_app.authentication;
 
 import com.example.vet_mvc_app.users.Repository.UserRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -9,20 +10,23 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @AllArgsConstructor
 @Service
 public class UserDetailsImplement implements UserDetailsService {
-    private final UserRepository  userRepository;
+    private final UserRepository userRepository;
 
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         var user = userRepository.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
+
+        var authority = new SimpleGrantedAuthority("ROLE_" + user.getRole().name());
         return new User(
-                        user.getEmail(),
-                        user.getPassword(),
-                        Collections.emptyList()
-                );
+                user.getEmail(),
+                user.getPassword(),
+                List.of(authority)
+        );
     }
 }
